--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "dom-to-image-more": "^3.6.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.512.0",
     "next": "15.3.3",
     "react": "^19.0.0",
